add win/lose screen and few minor bugfixes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 				<div class="square-c"></div>
 			</div>
 		</div>
+		<div class="game-message hidden" id="overlay">
+			<h1 class="message-text" id="message"></h1>
+			<div class="message-btn-container">
+				<div class="message-btn" id="retry">Retry</div>
+				<div class="message-btn" id="next">Next</div>
+			</div>
+		</div>
 		<div class="operators-container">
 			<div class="operator" id="sum">+</div>
 			<div class="operator" id="subtract">-</div>
