--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta charset="utf-8">
 	<title>24</title>
 	<link href="style/main.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Domine' rel='stylesheet'>
 </head>
 <body>
 	<h1 class="title">24</h1>
